
WinMerge 2.13.19
  Add missing keywords to Pascal highlighter (#2834192)
  Recognize .ascx files as ASP files (#3042393)
  Fix help locations (#2988974)
  Show only "Copy to other side" item in file compare
    context menu (#2600787)
  Expand/collapse folders from keyboard (#2203904)
  Improve detecting XML files in file compare (#2726531)
  Improve startup time (#2788142)
  New translation: Persian (#2877121, #3065119)
  New translation: Serbian (#3017674, #3065119)
  Installer: Drop Windows 9x/ME/NT4 support and use Microsoft runtime
    libraries installer (#3070254)
  Installer: Remove Uninstall shortcut from start menu folder (#3076909)
  Installer: Don't install quick launch icon for Windows 7 (#3079966)
  Bugfix: WinMerge was vulnerable to DLL hijacking as described in
    Microsoft Security Advisory (2269637)  (#33056008)
  Bugfix: Location pane focus enabled "Save" (#3022292)
  Bugfix: "Copy and advance" toolbar icons not automatically enabled (#3033325)
  Translation updates:
  - Bulgarian (#3082392)
  - Chinese (#3033324)
  - Dutch (#2804979)
  - French (#2850842, #2968200)
  - Slovenian (#2917796, #2932094, #2934354, #3070136)
  - Spanish (#2930734)
  - Turkish (#2825132, #2827817)
  - Ukrainian (#2817835)

WinMerge 2.12.4 - 2009-06-09 (r6833)
  Add more C/C++ types to syntax highlight (#2776705)
  Create config log file to My Documents-folder (#2789839)
  Bugfix: Reports had same left/right descriptions (#2772646)
  Bugfix: When conflict file saved trailing line-ending was lost (#2550412)
  Bugfix: File compare HTML reports use invald DOCTYPE (#2783477)
  Bugfix: "##" in file filter pattern caused an infinite loop (#2789345)
  Bugfix: Could select prediffer when plugins were disabled (#2787131)
  Bugfix: Opening mixed-EOL file one side forced both files to be handled as
    mixed-eol files (#2022312)
  Bugfix: Didn't show correct EOL chars if whitespace chars were turned off
    and again on (#2791402)